draft-irtf-dtnrg-iana-bp-registries-01

--- a/draft-irtf-dtnrg-iana-bp-registries-01.html
+++ b/draft-irtf-dtnrg-iana-bp-registries-01.html
@@ -8,7 +8,7 @@
         body {
                 font-family: verdana, charcoal, helvetica, arial, sans-serif;
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		color: #000; background-color: #FFF;
                 margin: 2em;
         }
@@ -84,11 +84,11 @@
         p { margin-left: 2em; margin-right: 2em; }
         p.copyright { font-size: x-small; }
         p.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; margin-left: 3em; }
         table.toc { margin: 0 0 0 3em; padding: 0; border: 0; vertical-align: text-top; }
         td.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; vertical-align: text-top; }
 
         ol.text { margin-left: 2em; margin-right: 2em; }
@@ -121,7 +121,7 @@
         /* RFC-2629 <texttable>s. */
         table.all, table.full, table.headers, table.none {
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		text-align: center; border-width: 2px;
                 vertical-align: top; border-collapse: collapse;
         }
@@ -152,10 +152,10 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">M. Blanchet</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Viagenie</td></tr>
-<tr><td class="header">Intended status: Informational</td><td class="header">April 28, 2010</td></tr>
-<tr><td class="header">Expires: October 30, 2010</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Informational</td><td class="header">October 25, 2010</td></tr>
+<tr><td class="header">Expires: April 28, 2011</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />Delay-Tolerant Networks (DTN) Bundle Protocol IANA Registries<br />draft-irtf-dtnrg-iana-bp-registries-00.txt</h1>
+<h1><br />Delay-Tolerant Networks (DTN) Bundle Protocol IANA Registries<br />draft-irtf-dtnrg-iana-bp-registries-01.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -182,7 +182,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on October 30, 2010.</p>
+This Internet-Draft will expire on April 28, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -203,30 +203,36 @@ described in the Simplified BSD License.</p>
 <p class="toc">
 <a href="#anchor1">1.</a>&nbsp;
 Introduction<br />
-<a href="#anchor2">2.</a>&nbsp;
+<a href="#sdnv">2.</a>&nbsp;
+Treatment of Flag Fields Encoded using SDNVs<br />
+<a href="#anchor2">3.</a>&nbsp;
 Bundle Protocol<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor3">2.1.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor3">3.1.</a>&nbsp;
 Bundle Block Types<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor4">2.2.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor4">3.2.</a>&nbsp;
 Primary Bundle Protocol Version<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor5">2.3.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor5">3.3.</a>&nbsp;
 Bundle Processing Control Flags<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor6">2.4.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor6">3.4.</a>&nbsp;
 Block Processing Control Flags<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor7">2.5.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor7">3.5.</a>&nbsp;
 Bundle Status Report Flags<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor8">2.6.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor8">3.6.</a>&nbsp;
 Bundle Status Report Reason Codes<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor9">2.7.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor9">3.7.</a>&nbsp;
 Bundle Custody Signal Reason Codes<br />
-<a href="#anchor10">3.</a>&nbsp;
+<a href="#anchor10">4.</a>&nbsp;
 Security Considerations<br />
-<a href="#anchor11">4.</a>&nbsp;
+<a href="#anchor11">5.</a>&nbsp;
 IANA Considerations<br />
-<a href="#anchor12">5.</a>&nbsp;
+<a href="#anchor12">6.</a>&nbsp;
 Acknowledgements<br />
-<a href="#rfc.references1">6.</a>&nbsp;
+<a href="#rfc.references1">7.</a>&nbsp;
+References<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references1">7.1.</a>&nbsp;
 Normative References<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references2">7.2.</a>&nbsp;
+Informative References<br />
 <a href="#rfc.authors">&#167;</a>&nbsp;
 Author's Address<br />
 </p>
@@ -245,16 +251,28 @@ Introduction</h3>
         This document describes the actions needed to be executed by IANA.
 
 </p>
-<a name="anchor2"></a><br /><hr />
+<a name="sdnv"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.2"></a><h3>2.&nbsp;
+Treatment of Flag Fields Encoded using SDNVs</h3>
+
+<p>The DTN protocols use several extensible bit flag fields that are encoded as
+Self-Delimiting Numeric Values (SDNVs) as defined in Section 4.1 of <a class='info' href='#RFC5050'>[RFC5050]<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a>. For these fields, the registry specifies the allocation and usage of bit positions within the unencoded field.  The SDNV encoding treats the ensemble of bits in the unencoded value as a numeric value to be encoded on transmission and decoded on reception as described in <a class='info' href='#RFC5050'>[RFC5050]<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a>.
+</p>
+<p>Processing of SDNV-encoded flags is discussed in <a class='info' href='#I-D.irtf-dtnrg-sdnv'>[I&#8209;D.irtf&#8209;dtnrg&#8209;sdnv]<span> (</span><span class='info'>Eddy, W. and E. Davies, &ldquo;Using Self-Delimiting Numeric Values in Protocols,&rdquo; October&nbsp;2010.</span><span>)</span></a>.
+</p>
+<p>Section 4.1 of <a class='info' href='#RFC5050'>[RFC5050]<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a> specifies that implementations are not required to handle SDNVs with more than 64 bits in their unencoded value.  Accordingly SDNV encoded flag fields should be limited to 64 bit positions.
+</p>
+<a name="anchor2"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.3"></a><h3>3.&nbsp;
 Bundle Protocol</h3>
 
 <p>The Bundle Protocol(BP)<a class='info' href='#RFC5050'>[RFC5050]<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a> has fields requiring a registry managed by IANA.
 </p>
 <a name="anchor3"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.2.1"></a><h3>2.1.&nbsp;
+<a name="rfc.section.3.1"></a><h3>3.1.&nbsp;
 Bundle Block Types</h3>
 
 <p>The Bundle Protocol has a Bundle Block Type code field <a class='info' href='#RFC5050'>(section 4.5.2)<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a> [RFC5050]. An IANA registry shall be setup as follows.
@@ -302,7 +320,7 @@ Bundle Block Types</h3>
 </p>
 <a name="anchor4"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.2.2"></a><h3>2.2.&nbsp;
+<a name="rfc.section.3.2"></a><h3>3.2.&nbsp;
 Primary Bundle Protocol Version</h3>
 
 <p>The Bundle Protocol has a version field <a class='info' href='#RFC5050'>(section 4.5.1)<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a> [RFC5050]. An IANA registry shall be setup as follows.
@@ -337,14 +355,14 @@ Primary Bundle Protocol Version</h3>
 </p>
 <a name="anchor5"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.2.3"></a><h3>2.3.&nbsp;
+<a name="rfc.section.3.3"></a><h3>3.3.&nbsp;
 Bundle Processing Control Flags</h3>
 
-<p>The Bundle Protocol has a Bundle Processing Control flags field <a class='info' href='#RFC5050'>(section 4.2)<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a> [RFC5050]. An IANA registry shall be setup as follows.
+<p>The Bundle Protocol has a Bundle Processing Control flags field <a class='info' href='#RFC5050'>(section 4.2)<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a> [RFC5050] encoded as an SDNV(<a class='info' href='#sdnv'>see section<span> (</span><span class='info'>Treatment of Flag Fields Encoded using SDNVs</span><span>)</span></a>). An IANA registry shall be setup as follows.
 </p>
 <p>The registration policy for this registry is: Specification Required
 </p>
-<p>The Value range is: Variable length.
+<p>The Value range is: Variable length. Maximum number of flag bit positions: 64
 </p>
 <p style='text-align: center'>Bundle Processing Control Flags Registry
 </p><table class="full" align="center" border="0" cellpadding="2" cellspacing="2">
@@ -435,14 +453,14 @@ Bundle Processing Control Flags</h3>
 
 <a name="anchor6"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.2.4"></a><h3>2.4.&nbsp;
+<a name="rfc.section.3.4"></a><h3>3.4.&nbsp;
 Block Processing Control Flags</h3>
 
 <p>The Bundle Protocol has a Block Processing Control flags field <a class='info' href='#RFC5050'>(section 4.3)<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a> [RFC5050]. An IANA registry shall be setup as follows.
 </p>
 <p>The registration policy for this registry is: Specification Required
 </p>
-<p>The Value range is: Variable length.
+<p>The Value range is: Variable length. Maximum number of flag bit positions: 64
 </p>
 <p style='text-align: center'>Block Processing Control Flags Registry
 </p><table class="full" align="center" border="0" cellpadding="2" cellspacing="2">
@@ -488,7 +506,7 @@ Block Processing Control Flags</h3>
 
 <a name="anchor7"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.2.5"></a><h3>2.5.&nbsp;
+<a name="rfc.section.3.5"></a><h3>3.5.&nbsp;
 Bundle Status Report Flags</h3>
 
 <p>The Bundle Protocol has a Status Report Status Flag field<a class='info' href='#RFC5050'>(section 6.1.1)<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a> [RFC5050]. An IANA registry shall be setup as follows.
@@ -553,7 +571,7 @@ Bundle Status Report Flags</h3>
 </p>
 <a name="anchor8"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.2.6"></a><h3>2.6.&nbsp;
+<a name="rfc.section.3.6"></a><h3>3.6.&nbsp;
 Bundle Status Report Reason Codes</h3>
 
 <p>The Bundle Protocol has a Bundle Status Report Reason Codes field<a class='info' href='#RFC5050'>(section 6.1.1)<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a> [RFC5050]. An IANA registry shall be setup as follows.
@@ -628,7 +646,7 @@ Bundle Status Report Reason Codes</h3>
 </p>
 <a name="anchor9"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.2.7"></a><h3>2.7.&nbsp;
+<a name="rfc.section.3.7"></a><h3>3.7.&nbsp;
 Bundle Custody Signal Reason Codes</h3>
 
 <p>The Bundle Protocol has a Bundle Custody Signal Reason Codes field<a class='info' href='#RFC5050'>(section 6.1.2)<span> (</span><span class='info'>Scott, K. and S. Burleigh, &ldquo;Bundle Protocol Specification,&rdquo; November&nbsp;2007.</span><span>)</span></a> [RFC5050]. An IANA registry shall be setup as follows.
@@ -698,14 +716,14 @@ Bundle Custody Signal Reason Codes</h3>
 </p>
 <a name="anchor10"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.3"></a><h3>3.&nbsp;
+<a name="rfc.section.4"></a><h3>4.&nbsp;
 Security Considerations</h3>
 
 <p>This document requests the creation of registries managed by IANA. There is no security issues involved. Refer to Security Considerations of the referenced protocols.
 </p>
 <a name="anchor11"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.4"></a><h3>4.&nbsp;
+<a name="rfc.section.5"></a><h3>5.&nbsp;
 IANA Considerations</h3>
 
 <p>
@@ -713,14 +731,19 @@ IANA is requested to create the registries as described in the previous sections
 </p>
 <a name="anchor12"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.5"></a><h3>5.&nbsp;
+<a name="rfc.section.6"></a><h3>6.&nbsp;
 Acknowledgements</h3>
 
-<p>The editor would like to thank the following people who have provided comments and suggestions to this document, in no specific order: Stephen Farrell, Daniel Ellard, Scott Burleigh, Keith Scott.
+<p>The editor would like to thank the following people who have provided comments and suggestions to this document, in no specific order: Stephen Farrell, Daniel Ellard, Scott Burleigh, Keith Scott, Elwyn Davies.
 </p>
+<a name="rfc.references"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.7"></a><h3>7.&nbsp;
+References</h3>
+
 <a name="rfc.references1"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<h3>6.&nbsp;Normative References</h3>
+<h3>7.1.&nbsp;Normative References</h3>
 <table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="RFC4838">[RFC4838]</a></td>
 <td class="author-text">Cerf, V., Burleigh, S., Hooke, A., Torgerson, L., Durst, R., Scott, K., Fall, K., and H. Weiss, &ldquo;<a href="http://tools.ietf.org/html/rfc4838">Delay-Tolerant Networking Architecture</a>,&rdquo; RFC&nbsp;4838, April&nbsp;2007 (<a href="http://www.rfc-editor.org/rfc/rfc4838.txt">TXT</a>).</td></tr>
@@ -728,6 +751,14 @@ Acknowledgements</h3>
 <td class="author-text">Scott, K. and S. Burleigh, &ldquo;<a href="http://tools.ietf.org/html/rfc5050">Bundle Protocol Specification</a>,&rdquo; RFC&nbsp;5050, November&nbsp;2007 (<a href="http://www.rfc-editor.org/rfc/rfc5050.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC5326">[RFC5326]</a></td>
 <td class="author-text">Ramadas, M., Burleigh, S., and S. Farrell, &ldquo;<a href="http://tools.ietf.org/html/rfc5326">Licklider Transmission Protocol - Specification</a>,&rdquo; RFC&nbsp;5326, September&nbsp;2008 (<a href="http://www.rfc-editor.org/rfc/rfc5326.txt">TXT</a>).</td></tr>
+</table>
+
+<a name="rfc.references2"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<h3>7.2.&nbsp;Informative References</h3>
+<table width="99%" border="0">
+<tr><td class="author-text" valign="top"><a name="I-D.irtf-dtnrg-sdnv">[I-D.irtf-dtnrg-sdnv]</a></td>
+<td class="author-text">Eddy, W. and E. Davies, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-irtf-dtnrg-sdnv-07.txt">Using Self-Delimiting Numeric Values in Protocols</a>,&rdquo; draft-irtf-dtnrg-sdnv-07 (work in progress), October&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-irtf-dtnrg-sdnv-07.txt">TXT</a>).</td></tr>
 </table>
 
 <a name="rfc.authors"></a><br /><hr />
@@ -739,14 +770,14 @@ Acknowledgements</h3>
 <tr><td class="author-text">&nbsp;</td>
 <td class="author-text">Viagenie</td></tr>
 <tr><td class="author-text">&nbsp;</td>
-<td class="author-text">2600 boul. Laurier, suite 625</td></tr>
+<td class="author-text">2875 boul. Laurier, suite D2-630</td></tr>
 <tr><td class="author-text">&nbsp;</td>
-<td class="author-text">Quebec, QC  G1V 4W1</td></tr>
+<td class="author-text">Quebec, QC  G1V 2M2</td></tr>
 <tr><td class="author-text">&nbsp;</td>
 <td class="author-text">Canada</td></tr>
 <tr><td class="author" align="right">Email:&nbsp;</td>
 <td class="author-text"><a href="mailto:Marc.Blanchet@viagenie.ca">Marc.Blanchet@viagenie.ca</a></td></tr>
 <tr><td class="author" align="right">URI:&nbsp;</td>
-<td class="author-text"><a href="http://www.viagenie.ca">http://www.viagenie.ca</a></td></tr>
+<td class="author-text"><a href="http://viagenie.ca">http://viagenie.ca</a></td></tr>
 </table>
 </body></html>
